tests/typing/pass/array/bounds_iff.act
contract B

constructor()

creates

  uint x := 0
  int[3] a := [1,2,3]


transition f() : uint256

iff

  a[x] > 0
  x < 3

storage

returns 1
